# karl-flashcards-web-app

./: .gitattributes  .gitignore  .gitlab-ci.yml  Attributions.md  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.yml  karl-openapi.json  populate.py
backend/app/: .gitignore  pyproject.toml
backend/app/alembic/versions/: 03d8017f5307_add_target_recall_setting.py  139df0683d97_remove_unnecessary_columns_is_test_and_studyset_deck_id.py  166024720669_add_test_history_and_convert_test_to_.py  19a191ff920c_create_creation_date_col_in_studyset.py  23e1f44f4f62_add_log_value_post_test.py  250c2f90374e_add_models.py  2ee368bbc6f6_add_test_mode_column.py  36fb79f5f33e_json_to_jsonb.py  465dc0d727bd_add_deck_fact_history_suspended_user_.py  47a0d502a95a_rename_study_set_to_studyset_and_create_session_deck.py  47fe14c79175_rename_correct_to_response_for_.py  491383f70589_add_separate_reported_and_deleted_tables.py  4afdb8d415dd_add_log_types_for_test_mode.py  4c116a99c4ee_add_log_update_user.py  4c4de690e32f_add_test_mode_column_to_fact.py  4cb1bd466ce1_add_show_tip.py  5226e60d1987_remove_unnecessary_index.py  57667899ac6f_change_test_mode_to_int.py  61dba6b62053_add_is_test_to_deck_partial_index.py  641d695f446e_add_other_reason_columns_to_mnemonic_.py  66eb96210d4a_add_marked_table.py  6872aa796f4a_add_rationale_column.py  6af85811ee88_convert_bool_to_enum.py  6c00659b79c1_rename_test_mode_to_new_test_mode.py  (+31 more)
backend/app/app/: backend_pre_start.py  celeryworker_pre_start.py  main.py  worker.py
backend/app/scripts/: reformat_test.py
frontend/: .env  env  (+5 more)
(+166 files in other folders)
