[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.22.0"
fastapi = "^0.100.0"
python-multipart = "^0.0.6"
email-validator = "^1.0.5"
requests = "^2.23.0"
celery = "~5.2.7"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^6.1.0"
pydantic = "^1.4"
emails = "^0.6"
gunicorn = "^20.1.0"
jinja2 = "^2.11.2"
psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"
sqlalchemy = "^1.3.16"
pytest = "^5.4.1"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
sentry_sdk = "^0.14.3"
cython = "^0.29.30"
# numpy = "^1.25.2"
scikit-learn = "^1.3.0"
pytest-timeout = "^1.3.4"
tqdm = "^4.46.0"
pandas = "^2.1.0"
MarkupSafe = "2.0.1"

[tool.poetry.dev-dependencies]
mypy = "^1.5"
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2.8.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

